# labs_4_semester

./: .gitignore  README.md
KSIS/lab1/rep/: лаб 1 КСиС отчет.docx
KSIS/lab1/src/: lab1.asm
KSIS/lab2/rep/: lab2KSISrep.docx
KSIS/lab2/src/: Source.cpp
KSIS/lab3/rep/: lab3KSIS.docx
KSIS/lab3/src/: Source.cpp
KSIS/lab4/rep/: KSISlab4Rep.odt
KSIS/lab4/src/: m.asm
KSIS/lab5/rep/: Lab5KSISrep.docx
KSIS/lab6/rep/: ksis6.docx
KSIS/lab7/rep/: lab7ksis.docx
KSIS/lab8/rep/: lab8ksis.docx
KSIS/lab9/rep/: ksis9rep.docx
MSSIT/rep/: МССИТ лаб 1 отчет.docx
OOTISP/lab 1/rep/: ООТиСП лаб 1 отчет.docx
OOTISP/lab1/src/: Source.cpp
OOTISP/lab2/rep/: lab2 OOTISP отчет.docx
OOTISP/lab2/src/: Source.cpp
OOTISP/lab3/rep/: lab3OOTISPотчет.docx
OOTISP/lab3/src/: Check.cpp  Check.h  Document.cpp  Document.h  Receipt.cpp  Receipt.h  Source.cpp  Waybill.cpp  Waybill.h
OOTISP/lab4/rep/: lab4 OOTPISP report.docx
OOTISP/lab5/rep/: lab5OOTPISP.odt
OOTISP/lab5/source/: tasks.h
OOTISP/lab5/src/: CMakeLists.txt  Complex.cpp  Complex.h  Square.cpp  Square.h  main.cpp  makefile  program1.cpp  program2.cpp  task1.cpp  task2.cpp  task3.cpp
OOTISP/lab6/rep/: Lab6OOTISPrep.docx
OOTISP/lab6/src/: CMakeLists.txt  Person.cpp  Person.h  main.cpp  task1.cpp  task1.h  task2.cpp  task2.h
OOTISP/lab7/rep/: Lab7OOTISP.docx
OOTISP/lab7/src/: CMakeLists.txt  main.cpp  task1.cpp  task1.h  task2.cpp  task2.h  task3.cpp  task3.h
OSISP/lab1/rep/: ОСиСП lab1 rep.docx
OSISP/lab2/rep/: лаб 2 ОСиСП отчет.docx
OSISP/lab7/src/: CMakeLists.txt  consumer.c  producer.c
(+38 files in other folders)
